force-app/main/default/objects/dbt__Project__c/fields/dbt__Billable__c.field-meta.xml
<CustomField>
    <fullName>dbt__Billable__c</fullName>
    <label>Billable</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>