force-app/main/default/objects/dbt__Project__c/fields/dbt__End_Date__c.field-meta.xml
<CustomField>
    <fullName>dbt__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>