force-app/main/default/objects/dbt__Project__c/fields/dbt__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>dbt__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>