force-app/main/default/objects/dbt__Project__c/listViews/dbt__All.listView-meta.xml
<ListView>
    <fullName>dbt__All</fullName>
    <columns>NAME</columns>
    <columns>dbt__Active__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>dbt__Billable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>